--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,10 +33,11 @@ jobs:
       uses: codecov/codecov-action@v3
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-    - name: Build with Maven
-      run: mvn -B test
 
-    - name: Generate JaCoCo Badge
-      uses: cicirello/jacoco-badge-generator@v2
-      with:
-        generate-branches-badge: true
+#    - name: Build with Maven
+#      run: mvn -B test
+
+#    - name: Generate JaCoCo Badge
+#      uses: cicirello/jacoco-badge-generator@v2
+#      with:
+#        generate-branches-badge: true
