--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,10 +34,13 @@ jobs:
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-#    - name: Build with Maven
-#      run: mvn -B test
+    - name: Build with Maven
+      run: mvn -B test
 
-#    - name: Generate JaCoCo Badge
-#      uses: cicirello/jacoco-badge-generator@v2
-#      with:
-#        generate-branches-badge: true
+    - name: Generate JaCoCo Badge
+      uses: cicirello/jacoco-badge-generator@v2
+      with:
+        generate-branches-badge: true
+
+
+
